tests/snapshots/snapshots__budget_pluggy_level3.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 → level 4 (1278 words)

__init__.py
     1→__all__ = [
    32→def __getattr__(name: str) -> str:
_callers.py
    22→# Need to distinguish between old- and new-style hook wrappers.
    24→Teardown: TypeAlias = Generator[None, object, object]
    27→def run_old_style_hookwrapper(
    28→    hook_impl: HookImpl, hook_name: str, args: Sequence[object]
    29→) -> Teardown:
    30→    """
    60→def _raise_wrapfail(
    61→    wrap_controller: Generator[None, object, object],
    62→    msg: str,
    63→) -> NoReturn:
    70→def _warn_teardown_exception(
    71→    hook_name: str, hook_impl: HookImpl, e: BaseException
    72→) -> None:
    82→def _multicall(
    83→    hook_name: str,
    84→    hook_impls: Sequence[HookImpl],
    85→    caller_kwargs: Mapping[str, object],
    86→    firstresult: bool,
    87→) -> object | list[object]:
_hooks.py
    28→_T = TypeVar("_T")
    29→_F = TypeVar("_F", bound=Callable[..., object])
    31→_Namespace: TypeAlias = ModuleType | type
    32→_Plugin: TypeAlias = object
    33→_HookExec: TypeAlias = Callable[
    37→_HookImplFunction: TypeAlias = Callable[..., _T | Generator[None, Result[_T], None]]
    40→class HookspecOpts(TypedDict):
    56→class HookimplOpts(TypedDict):
    78→class HookspecMarker:
    88→    def __init__(self, project_name: str) -> None:
   111→    def __call__(  # noqa: F811
   112→        self,
   113→        function: _F | None = None,
   114→        firstresult: bool = False,
   115→        historic: bool = False,
   116→        warn_on_impl: Warning | None = None,
   117→        warn_on_impl_args: Mapping[str, Warning] | None = None,
   118→    ) -> _F | Callable[[_F], _F]:
   165→class HookimplMarker:
   175→    def __init__(self, project_name: str) -> None:
   202→    def __call__(  # noqa: F811
   203→        self,
   204→        function: _F | None = None,
   205→        hookwrapper: bool = False,
   206→        optionalhook: bool = False,
   207→        tryfirst: bool = False,
   208→        trylast: bool = False,
   209→        specname: str | None = None,
   210→        wrapper: bool = False,
   211→    ) -> _F | Callable[[_F], _F]:
   281→def normalize_hookimpl_opts(opts: HookimplOpts) -> None:
   290→_PYPY = hasattr(sys, "pypy_version_info")
   293→def varnames(func: object) -> tuple[tuple[str, ...], tuple[str, ...]]:
   359→class HookRelay:
   365→    def __init__(self) -> None:
   370→        def __getattr__(self, name: str) -> HookCaller: ...
   377→_CallHistory: TypeAlias = list[
   382→class HookCaller:
   393→    def __init__(
   394→        self,
   395→        name: str,
   396→        hook_execute: _HookExec,
   397→        specmodule_or_class: _Namespace | None = None,
   398→        spec_opts: HookspecOpts | None = None,
   399→    ) -> None:
   420→    def has_spec(self) -> bool:
   424→    def set_specification(
   425→        self,
   426→        specmodule_or_class: _Namespace,
   427→        spec_opts: HookspecOpts,
   428→    ) -> None:
   438→    def is_historic(self) -> bool:
   442→    def _remove_plugin(self, plugin: _Plugin) -> None:
   449→    def get_hookimpls(self) -> list[HookImpl]:
   453→    def _add_hookimpl(self, hookimpl: HookImpl) -> None:
   477→    def __repr__(self) -> str:
   480→    def _verify_all_args_are_provided(self, kwargs: Mapping[str, object]) -> None:
   499→    def __call__(self, **kwargs: object) -> Any:
   516→    def call_historic(
   517→        self,
   518→        result_callback: Callable[[Any], None] | None = None,
   519→        kwargs: Mapping[str, object] | None = None,
   520→    ) -> None:
   543→    def call_extra(
   544→        self, methods: Sequence[Callable[..., object]], kwargs: Mapping[str, object]
   545→    ) -> Any:
   577→    def _maybe_apply_history(self, method: HookImpl) -> None:
   593→class _SubsetHookCaller(HookCaller):
   612→    def __init__(self, orig: HookCaller, remove_plugins: Set[_Plugin]) -> None:
   619→    def _hookimpls(self) -> list[HookImpl]:
   627→    def spec(self) -> HookSpec | None:  # type: ignore[override]
   631→    def _call_history(self) -> _CallHistory | None:  # type: ignore[override]
   634→    def __repr__(self) -> str:
   639→class HookImpl:
   656→    def __init__(
   657→        self,
   658→        plugin: _Plugin,
   659→        plugin_name: str,
   660→        function: _HookImplFunction[object],
   661→        hook_impl_opts: HookimplOpts,
   662→    ) -> None:
   692→    def __repr__(self) -> str:
   697→class HookSpec:
   709→    def __init__(self, namespace: _Namespace, name: str, opts: HookspecOpts) -> None:
_manager.py
    36→_BeforeTrace: TypeAlias = Callable[[str, Sequence[HookImpl], Mapping[str, Any]], None]
    37→_AfterTrace: TypeAlias = Callable[
    42→def _warn_for_function(warning: Warning, function: Callable[..., object]) -> None:
    52→class PluginValidationError(Exception):
    53→    """Plugin failed validation.
    59→    def __init__(self, plugin: _Plugin, message: str) -> None:
    65→class DistFacade:
    66→    """Emulate a pkg_resources Distribution"""
    68→    def __init__(self, dist: importlib.metadata.Distribution) -> None:
    71→    @property
    72→    def project_name(self) -> str:
    76→    def __getattr__(self, attr: str, default: Any | None = None) -> Any:
    79→    def __dir__(self) -> list[str]:
    83→class PluginManager:
    84→    """Core class which manages registration of plugin objects and 1:N hook
   100→    def __init__(self, project_name: str) -> None:
   114→    def _hookexec(
   115→        self,
   116→        hook_name: str,
   117→        methods: Sequence[HookImpl],
   118→        kwargs: Mapping[str, object],
   119→        firstresult: bool,
   120→    ) -> object | list[object]:
   125→    def register(self, plugin: _Plugin, name: str | None = None) -> str | None:
   126→        """Register a plugin and return its name.
   176→    def parse_hookimpl_opts(self, plugin: _Plugin, name: str) -> HookimplOpts | None:
   177→        """Try to obtain a hook implementation from an item with the given name
   201→    def unregister(
   202→        self, plugin: _Plugin | None = None, name: str | None = None
   203→    ) -> Any | None:
   204→        """Unregister a plugin and all of its hook implementations.
   233→    def set_blocked(self, name: str) -> None:
   234→        """Block registrations of the given name, unregister if already registered."""
   238→    def is_blocked(self, name: str) -> bool:
   239→        """Return whether the given plugin name is blocked."""
   242→    def unblock(self, name: str) -> bool:
   243→        """Unblocks a name.
   252→    def add_hookspecs(self, module_or_class: _Namespace) -> None:
   253→        """Add new hook specifications defined in the given ``module_or_class``.
   278→    def parse_hookspec_opts(
   279→        self, module_or_class: _Namespace, name: str
   280→    ) -> HookspecOpts | None:
   281→        """Try to obtain a hook specification from an item with the given name
   296→    def get_plugins(self) -> set[Any]:
   297→        """Return a set of all registered plugin objects."""
   300→    def is_registered(self, plugin: _Plugin) -> bool:
   301→        """Return whether the plugin is already registered."""
   304→    def get_canonical_name(self, plugin: _Plugin) -> str:
   305→        """Return a canonical name for a plugin object.
   315→    def get_plugin(self, name: str) -> Any | None:
   316→        """Return the plugin registered under the given name, if any."""
   319→    def has_plugin(self, name: str) -> bool:
   320→        """Return whether a plugin with the given name is registered."""
   323→    def get_name(self, plugin: _Plugin) -> str | None:
   324→        """Return the name the plugin is registered under, or ``None`` if
   331→    def _verify_hook(self, hook: HookCaller, hookimpl: HookImpl) -> None:
   379→    def check_pending(self) -> None:
   380→        """Verify that all hooks which have not been verified against a
   395→    def load_setuptools_entrypoints(self, group: str, name: str | None = None) -> int:
   396→        """Load modules from querying the specified setuptools ``group``.
   425→    def list_plugin_distinfo(self) -> list[tuple[_Plugin, DistFacade]]:
   426→        """Return a list of (plugin, distinfo) pairs for all
   430→    def list_name_plugin(self) -> list[tuple[str, _Plugin]]:
   431→        """Return a list of (name, plugin) pairs for all registered plugins."""
   434→    def get_hookcallers(self, plugin: _Plugin) -> list[HookCaller] | None:
   435→        """Get all hook callers for the specified plugin.
   450→    def add_hookcall_monitoring(
   451→        self, before: _BeforeTrace, after: _AfterTrace
   452→    ) -> Callable[[], None]:
   453→        """Add before/after tracing functions for all hooks.
   487→    def enable_tracing(self) -> Callable[[], None]:
   488→        """Enable tracing of hook calls.
   512→    def subset_hook_caller(
   513→        self, name: str, remove_plugins: Iterable[_Plugin]
   514→    ) -> HookCaller:
   515→        """Return a proxy :class:`~pluggy.HookCaller` instance for the named
   525→def _formatdef(func: Callable[..., object]) -> str:
_result.py
    16→_ExcInfo: TypeAlias = tuple[type[BaseException], BaseException, TracebackType | None]
    20→class HookCallError(Exception):
    21→    """Hook was called incorrectly."""
    24→@final
    25→class Result(Generic[ResultType]):
    26→    """An object used to inspect and set the result in a :ref:`hook wrapper
    31→    def __init__(
    32→        self,
    33→        result: ResultType | None,
    34→        exception: BaseException | None,
    35→    ) -> None:
    36→        """:meta private:"""
    42→    @property
    43→    def excinfo(self) -> _ExcInfo | None:
    44→        """:meta private:"""
    51→    @property
    52→    def exception(self) -> BaseException | None:
    53→        """:meta private:"""
    56→    @classmethod
    57→    def from_call(cls, func: Callable[[], ResultType]) -> Result[ResultType]:
    58→        """:meta private:"""
    67→    def force_result(self, result: ResultType) -> None:
    68→        """Force the result(s) to ``result``.
    80→    def force_exception(self, exception: BaseException) -> None:
    81→        """Force the result to fail with ``exception``.
    91→    def get_result(self) -> ResultType:
    92→        """Get the result(s) for this hook call.
_tracing.py
    16→class TagTracer:
    17→    def __init__(self) -> None:
    22→    def get(self, name: str) -> TagTracerSub:
    25→    def _format_message(self, tags: Sequence[str], args: Sequence[object]) -> str:
    42→    def _processmessage(self, tags: tuple[str, ...], args: tuple[object, ...]) -> None:
    48→    def setwriter(self, writer: _Writer | None) -> None:
    51→    def setprocessor(self, tags: str | tuple[str, ...], processor: _Processor) -> None:
    59→class TagTracerSub:
    60→    def __init__(self, root: TagTracer, tags: tuple[str, ...]) -> None:
    64→    def __call__(self, *args: object) -> None:
    67→    def get(self, name: str) -> TagTracerSub:
_warnings.py
     4→class PluggyWarning(UserWarning):
    11→class PluggyTeardownRaisedWarning(PluggyWarning):
