tests/snapshots/snapshots__budget_pluggy_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 50 → level 0 (14 words)

AGENTS.md
CLAUDE.md
SECURITY.md
docs/conf.py
downstream/README.md
scripts/release.py
scripts/towncrier-draft-to-file.py
src/pluggy/__init__.py
src/pluggy/_callers.py
src/pluggy/_hooks.py
src/pluggy/_manager.py
src/pluggy/_result.py
src/pluggy/_tracing.py
src/pluggy/_warnings.py
